WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312462
Safari doesn't really fully dismiss the text selection in video player after closing the video
https://bugs.webkit.org/show_bug.cgi?id=312462
Summary
Safari doesn't really fully dismiss the text selection in video player after ...
Jean-Yves Avenard [:jya]
Reported
2026-04-16 04:27:11 PDT
Sometimes, when playing a video in fullscreen and exiting fullscreen, you can still select the text from the video even though it is no longer visible.
rdar://173346436
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-04-16 06:07:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62896
EWS
Comment 2
2026-04-19 22:39:10 PDT
Committed
311561@main
(6e15e1f73ee1): <
https://commits.webkit.org/311561@main
> Reviewed commits have been landed. Closing PR #62896 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2026-04-20 00:49:10 PDT
***
Bug 289025
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug